# ai-golf-caddie

./: .env.example  .gitignore  AI_USAGE.md  README.md  golf_statistics_by_handicap.json  pyproject.toml  requirements.txt
golfcaddie/: __init__.py  binning.py  cli.py  config.py  geocode.py  humor.py  llm.py  parser.py  pipecat_pipeline.py  statistics.py  stt_pipeline.py  tts.py  weather.py
tests/: conftest.py  test_binning.py  test_cli.py  test_config.py  test_humor.py  test_parser.py  test_statistics.py  test_stt_pipeline.py  test_weather.py
