[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golfcaddie"
version = "0.1.0"
description = "Humorous golf voice caddie using Speechmatics RT-STT in Pipecat"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

